log

Thu 14 Mar 2024 01:09:49 AM UTC: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
5f420ca
Thu 14 Mar 2024 01:11:40 AM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
144582b
Thu 14 Mar 2024 01:12:35 AM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
test.c: In function ‘test_reverseArray’:
test.c:125:5: error: implicit declaration of function ‘reverseArray’; did you mean ‘test_reverseArray’? [-Werror=implicit-function-declaration]
  125 |     reverseArray(arr, size);
      |     ^~~~~~~~~~~~
      |     test_reverseArray
cc1: all warnings being treated as errors
Compilation failed
a5a1244
Thu 14 Mar 2024 01:13:22 AM UTC: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 20/70
447014f
Thu 14 Mar 2024 01:54:32 AM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
   68 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
87b076d
Thu 14 Mar 2024 01:56:52 AM UTC: 
 exercises.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  0|4
total_score: 30/70
48d7f8e
Thu 14 Mar 2024 02:10:36 AM UTC: 
 exercises.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
9c0c763
Thu 14 Mar 2024 02:15:31 AM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|3
total_score: 40/70
6062c6d
Thu 14 Mar 2024 04:04:44 PM UTC: 
 exercises.c | 33 ++++++++++++++++++++++++++++++---
 1 file changed, 30 insertions(+), 3 deletions(-)
 tests:  0|0
total_score: 40/70
6f855e6
Thu 14 Mar 2024 04:14:04 PM UTC: 
 exercises.c | 18 ++----------------
 1 file changed, 2 insertions(+), 16 deletions(-)
test.c: In function ‘checkSorted’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
In file included from test.c:1:
exercises.c:111:7: error: unused variable ‘noDescendente’ [-Werror=unused-variable]
  111 |   int noDescendente = 0;
      |       ^~~~~~~~~~~~~
exercises.c:110:7: error: unused variable ‘noAscendente’ [-Werror=unused-variable]
  110 |   int noAscendente = 0;
      |       ^~~~~~~~~~~~
exercises.c:109:7: error: unused variable ‘descendente’ [-Werror=unused-variable]
  109 |   int descendente = 0;
      |       ^~~~~~~~~~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a7d48fe
Thu 14 Mar 2024 04:17:13 PM UTC: 
 exercises.c | 19 ++++++++++++++-----
 1 file changed, 14 insertions(+), 5 deletions(-)
 tests:  0|0
3795f67
Thu 14 Mar 2024 04:32:39 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:153:11: error: ‘libroo’ undeclared (first use in this function); did you mean ‘libro’?
  153 |   strcpy (libroo -> autor.nombre, nombreAutor) ;
      |           ^~~~~~
      |           libro
exercises.c:153:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
2c3529a
Thu 14 Mar 2024 04:32:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|1
total_score: 60/70
062bf69
